deletes extra experiment

--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -423,26 +423,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_forcing_timeseries():\n",
-    "    in_list = {i:[0] for i in range(n_buckets)}\n",
+    "    buck_rain_params = [rain_depth_range,\n",
+    "                        np.random.uniform(rain_probability_range[\"None\"][0],\n",
+    "                                            rain_probability_range[\"None\"][1]),\n",
+    "                        np.random.uniform(rain_probability_range[\"Heavy\"][0],\n",
+    "                                            rain_probability_range[\"Heavy\"][1]),\n",
+    "                        np.random.uniform(rain_probability_range[\"Light\"][0],\n",
+    "                                            rain_probability_range[\"Light\"][1])\n",
+    "                 ]\n",
     "\n",
-    "    for bucket in range(n_buckets):\n",
-    "        buck_rain_params = [rain_depth_range,\n",
-    "                            np.random.uniform(rain_probability_range[\"None\"][0],\n",
-    "                                                rain_probability_range[\"None\"][1]),\n",
-    "                            np.random.uniform(rain_probability_range[\"Heavy\"][0],\n",
-    "                                                rain_probability_range[\"Heavy\"][1]),\n",
-    "                            np.random.uniform(rain_probability_range[\"Light\"][0],\n",
-    "                                                rain_probability_range[\"Light\"][1])\n",
-    "                     ]\n",
-    "\n",
-    "        in_list[bucket] = [0]\n",
-    "        for i in range(1, num_records):\n",
-    "            in_list[bucket].append(generate_random_rain(in_list[bucket][i-1], buck_rain_params))\n",
+    "    in_list = [0]\n",
+    "    for i in range(1, num_records):\n",
+    "        in_list.append(generate_random_rain(in_list[i-1], buck_rain_params))\n",
     "                                   \n",
     "    return in_list"
    ]
@@ -456,11 +453,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "in_list = generate_forcing_timeseries()"
+    "in_list = {}\n",
+    "for bucket in range(n_buckets):\n",
+    "    in_list[bucket] = generate_forcing_timeseries()"
    ]
   },
   {
@@ -1351,7 +1350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Re-generate 'ground truth' data"
+    "Re-generate forcings and 'ground truth' data for buckets"
    ]
   },
   {
@@ -1459,7 +1458,10 @@
    ],
    "source": [
     "buckets, h_water_level, mass_overflow = setup_buckets()\n",
-    "in_list = generate_forcing_timeseries()\n",
+    "\n",
+    "in_list = {}\n",
+    "for bucket in range(n_buckets):\n",
+    "    in_list[bucket] = generate_forcing_timeseries()\n",
     "\n",
     "bucket_dictionary = {}\n",
     "for ibuc in range(n_buckets):\n",
@@ -1694,7 +1696,7 @@
    "metadata": {},
    "source": [
     "### 3.2 Training the model with increasing number of training buckets \n",
-    "We will increase the number of training buckets from 35 to 50, store the results for each bucket, and plot the comparative results for the loss and RMSE metrics."
+    "We will increase the number of training buckets from 35 to 50 and repeat the model development"
    ]
   },
   {
@@ -1737,7 +1739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Re-generate 'ground truth' data"
+    "Re-generate forcings and 'ground truth' data for buckets"
    ]
   },
   {
@@ -1843,7 +1845,10 @@
    ],
    "source": [
     "buckets, h_water_level, mass_overflow = setup_buckets()\n",
-    "in_list = generate_forcing_timeseries()\n",
+    "\n",
+    "in_list = {}\n",
+    "for bucket in range(n_buckets):\n",
+    "    in_list[bucket] = generate_forcing_timeseries()\n",
     "\n",
     "bucket_dictionary = {}\n",
     "for ibuc in range(n_buckets):\n",
@@ -2075,111 +2080,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.8 Experimentation: Evaluating the number of training buckets using Information Theory metrics\n",
-    "Now we use Entropy and Mutual Information as metrics of evaluation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import entropy, mutual_info_score\n",
-    "from sklearn.metrics import mutual_info_score\n",
-    "\n",
-    "criterion = nn.MSELoss()  # Use costome loss function.\n",
-    "optimizer = optim.Adam(lstm.parameters(), lr=learning_rate[0])\n",
-    "\n",
-    "# Increase the number of training buckets\n",
-    "buckets_for_training = [1, 2, 3, 4, 5]\n",
-    "\n",
-    "# Create a dictionary to store the results\n",
-    "results = {}\n",
-    "\n",
-    "epoch_bar = tqdm(range(num_epochs),desc=\"Training\", position=0, total=num_epochs)\n",
-    "\n",
-    "for epoch in epoch_bar:\n",
-    "    \n",
-    "    for ibuc in buckets_for_training:\n",
-    "        \n",
-    "        batch_bar = tqdm(enumerate(train_loader[ibuc]),\n",
-    "                         desc=\"Bucket: {}, Epoch: {}\".format(str(ibuc),str(epoch)),\n",
-    "                         position=1,\n",
-    "                         total=len(train_loader[ibuc]))\n",
-    "\n",
-    "        for i, (data, targets) in batch_bar:\n",
-    "\n",
-    "            optimizer.zero_grad()\n",
-    "\n",
-    "            optimizer = optim.Adam(lstm.parameters(), lr=learning_rate[epoch])\n",
-    "\n",
-    "            data = data.to(device=device)\n",
-    "            targets = targets.to(device=device)\n",
-    "\n",
-    "            # Forward\n",
-    "            lstm_output = lstm(data) \n",
-    "            loss = criterion(lstm_output,targets)\n",
-    "\n",
-    "            #backward\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "\n",
-    "            # gradient descent or adam step\n",
-    "            optimizer.step()\n",
-    "\n",
-    "            # Compute entropy and mutual information\n",
-    "            entropy_val = entropy(lstm_output.cpu().detach().numpy().flatten())\n",
-    "            mi_val = mutual_info_score(targets.cpu().detach().numpy().flatten(), lstm_output.cpu().detach().numpy().flatten())\n",
-    "\n",
-    "            batch_bar.set_postfix(loss=loss.cpu().item(),\n",
-    "                                  RMSE=\"{:.2f}\".format(loss**(1/2)),\n",
-    "                                  entropy=\"{:.2f}\".format(entropy_val),\n",
-    "                                  MI=\"{:.2f}\".format(mi_val),\n",
-    "                                  epoch=epoch)\n",
-    "            batch_bar.update()\n",
-    "\n",
-    "        with torch.no_grad():\n",
-    "            rmse_list = []\n",
-    "            entropy_list = []\n",
-    "            mi_list = []\n",
-    "            for i, (data_, targets_) in enumerate(train_loader[ibuc]):\n",
-    "                data_ = data_.to(device=device)\n",
-    "                targets_ = targets_.to(device=device)\n",
-    "                lstm_output_ = lstm(data_)\n",
-    "                MSE_ = criterion(lstm_output_, targets_)\n",
-    "                rmse_list.append(MSE_**(1/2))\n",
-    "                entropy_val_ = entropy(lstm_output_.cpu().detach().numpy().flatten())\n",
-    "                mi_val_ = mutual_info_score(targets_.cpu().detach().numpy().flatten(), lstm_output_.cpu().detach().numpy().flatten())\n",
-    "                entropy_list.append(entropy_val_)\n",
-    "                mi_list.append(mi_val_)\n",
-    "\n",
-    "        epoch_bar.set_postfix(loss=loss.cpu().item(),\n",
-    "                              RMSE=\"{:.2f}\".format(np.mean(np.array(rmse_list))),\n",
-    "                              entropy=\"{:.2f}\".format(np.mean(np.array(entropy_list))),\n",
-    "                              MI=\"{:.2f}\".format(np.mean(np.array(mi_list))),\n",
-    "                              epoch=epoch)\n",
-    "        batch_bar.update()\n",
-    "\n",
-    "        # Store the results for each bucket\n",
-    "        if ibuc not in results:\n",
-    "            results[ibuc] = {\"loss\": [], \"RMSE\": [], \"entropy\": [], \"MI\": []}\n",
-    "        results[ibuc][\"loss\"].append(loss.cpu().item())\n",
-    "        results[ibuc][\"RMSE\"].append(np.mean(np.array(rmse_list)))\n",
-    "        results[ibuc][\"entropy\"].append(np.mean(np.array(entropy_list)))\n",
-    "        results[ibuc][\"MI\"].append(np.mean(np.array(mi_list)))\n",
-    "\n",
-    "# Plot the comparative results, first plot entropy \n",
-    "for ibuc in results:\n",
-    "    plt.plot(results[ibuc][\"entropy\"], label=\"Bucket {}\".format(ibuc))\n",
-    "plt.title(\"Entropy vs Epoch for Different Buckets\")\n"
-   ]
   },
   {
    "cell_type": "code",
