add binder in readme

--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -10,9 +10,9 @@
     "This notebook is designed to help students understand the fundamentals of simulating dynamic systems with Deep Learning. \n",
     "\n",
     "\n",
-    "This tutorial models a leaking bucket because this stystem is much simpler than a watershed. So we can be a little more confident that our synthetic leaking buckets approximante the associated real-world processes.\n",
+    "This tutorial models a leaking bucket because this hydrological system is much simpler than a watershed and we can be a little more confident that our synthetic leaking buckets approximante the associated real-world processes.\n",
     "\n",
-    "The data is generated synthetically in this notebook based on simple numerical simulations of a hydrological system (leaking buckets) with varying characteristics/attributes and including dynamic forcings for precipitation. We will develop a single-layer Long Short-Term Memory (LSTM) network to learn dynamics of water level and fluxes out from the \"ground truth\" leaky bucket data. \n",
+    "We generate the data synthetically in this notebook using simple numerical simulations of the hydrological system (leaking buckets) and varying bucket characteristics/attributes and variables including dynamic forcings for precipitation. We will develop a single-layer Long Short-Term Memory (LSTM) network to learn dynamics of water level and fluxes out from bucket based on the \"ground truth\" data.\n",
     "\n",
     "In this notebook, the user can experiment with modifying the system setup and exploring the outcomes to understand hydrologic process representations and their predictability."
    ]
@@ -23,7 +23,7 @@
    "source": [
     "# 1. Setup\n",
     "\n",
-    "The first thing to do is setup the notebook environment with all the libraries, declare model global parameters, settings, variables and functions that define the bucket system we want to represent, as well as define the hyperparameters and set up for the deep learning model. \n",
+    "The first thing to do is setup the notebook environment with all the libraries, declare model global parameters, settings, variables and functions that define the bucket system we want to represent, as well as define the hyperparameters and structure for the deep learning model. \n",
     "\n",
     "Note: in a typical full-scale modeling framework, these would be decalared in a configuration file."
    ]
@@ -1892,7 +1892,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
