output vars can change

--- a/src/run_deep_bucket_lab_refactor.ipynb
+++ b/src/run_deep_bucket_lab_refactor.ipynb
@@ -130,7 +130,8 @@
    "source": [
     "model_validator = ModelValidator(trained_model, device, \n",
     "                                 bucket_dictionary, val_loader, \n",
-    "                                 config, \"val\", model_controller.scaler_out)\n",
+    "                                 config, \"val\", \n",
+    "                                 model_controller.scaler_out)\n",
     "model_validator.validate_model(do_plot_timeseries=True)"
    ]
   },
