refactor working as main lab notebook

--- a/src/run_deep_bucket_lab_refactor.ipynb
+++ b/src/run_deep_bucket_lab_refactor.ipynb
@@ -9,7 +9,6 @@
     "import yaml\n",
     "import torch\n",
     "from data_generation import BucketSimulation\n",
-    "from lstm import deep_bucket_model\n",
     "from model_controller import ModelController\n",
     "from validation import ModelValidator\n",
     "from vizualization import Visualization"
@@ -108,8 +107,7 @@
     "ibuc = 1\n",
     "scalers = (model_controller.scaler_in, model_controller.scaler_out)\n",
     "viz = Visualization(bucket_dictionary, config, scalers)\n",
-    "viz.viz_simulation(\"val\", ibuc)\n",
-    "# viz.viz_loader(val_loader[ibuc], scalers)"
+    "viz.viz_simulation(\"val\", ibuc)"
    ]
   },
   {
@@ -119,7 +117,7 @@
    "outputs": [],
    "source": [
     "# Now train_loader, val_loader, and test_loader should be dictionaries\n",
-    "trained_model, results = model_controller.train_model(train_loader)"
+    "trained_model = model_controller.train_model(train_loader)"
    ]
   },
   {
