reorganize and readme

--- a/run/run_deep_bucket_lab_with_graphics.ipynb
+++ b/run/run_deep_bucket_lab_with_graphics.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../src/')\n",
     "import yaml\n",
     "import torch\n",
     "from data_generation import BucketSimulation\n",
@@ -26,7 +28,7 @@
     "        config = yaml.safe_load(file)\n",
     "    return config\n",
     "\n",
-    "config = load_config('configuration.yml')"
+    "config = load_config('../configuration/configuration.yml')"
    ]
   },
   {
