--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -719,9 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for ibuc in buckets_for_val:\n",
@@ -780,8 +778,8 @@
     "    def forward(self, x, init_states=None):\n",
     "\n",
     "        if init_states is None:\n",
-    "            h_t = Variable(torch.zeros(1, x.size(0), self.hidden_size)) # hidden state\n",
-    "            c_t = Variable(torch.zeros(1, x.size(0), self.hidden_size)) # internal state\n",
+    "            h_t = Variable(torch.zeros(1, x.size(0), self.hidden_size, device=device)) # hidden state\n",
+    "            c_t = Variable(torch.zeros(1, x.size(0), self.hidden_size, device=device)) # internal state\n",
     "            init_states = (h_t, c_t)\n",
     "           \n",
     "        out, _ = self.lstm(x, init_states)\n",
@@ -1402,9 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lstm = LSTM1(num_classes=n_output,  \n",
@@ -1443,6 +1439,41 @@
     "for ibuc in buckets_for_val:\n",
     "    check_validation_period(lstm, np_val_seq_X, ibuc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1461,7 +1492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
