remove experiment from notebook

--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -1249,7 +1249,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Experimentation\n",
+    "# 3. Clean up the code, add modularity, for easy use and modification\n",
+    "\n",
+    "## 3.1 src\n",
+    "Contains the clean, modular code for the project, divided into several scripts:  \n",
+    "  - `data_generation.py`: Generates synthetic data simulating a leaking bucket hydrologic response.  \n",
+    "  - `lstm.py`: Implements the LSTM deep learning model.  \n",
+    "  - `model_controller.py`: Manages model functions such as training and data normalization.  \n",
+    "  - `validation.py`: Executes model validation and computes performance statistics.  \n",
+    "  - `vizualization.py`: Provides functionality for visualizing data and predictions.  \n",
+    "  \n",
+    "## 3.2 run\n",
+    "\n",
+    "Includes Jupyter notebooks and scripts for direct execution of the model training and simulation:\n",
+    "  - `run_deep_bucket_lab_with_graphics.ipynb`: A Jupyter notebook with comprehensive visual outputs.\n",
+    "  - `run_deep_bucket_lab.py`: A script for running the model from the command line.\n",
+    "\n",
+    "## 3.3 configuration\n",
+    "\n",
+    "Stores configuration files that dictate model parameters and settings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Experimentation\n",
     "\n",
     "With our general leaky bucket model setup and training/validation framework in place, we now enter the experimentation phase. This stage allows us to explore various scenarios and understand how different configurations and settings impact the model's behavior and predictions.\n",
     "\n",
@@ -1262,6 +1287,8 @@
    "source": [
     "In this phase, you're encouraged to experiment with variations in the bucket characteristics and modeling setup. Here are some ideas to get you started:\n",
     "\n",
+    "- **Data and system uncertainty**:\n",
+    "  - `./experiments/noise_iteration.py` Hosts a script designed to run a specific experiment testing model sensitivity to input noise.\n",
     "- **Modifying Ground Truth Data**:\n",
     "  - To simulate a more \"flashy\" system, you might reduce the probability of heavy precipitation and increase its magnitude.\n",
     "  - For simulating smaller buckets, try reducing the size of the bucket attributes.\n",
@@ -1271,202 +1298,10 @@
     "  - Experiment with the number of training buckets. Increasing or decreasing this number can show how the model performs with more or less training data.\n",
     "  - Alter the length of the time series. This can help you understand the impact of short-term versus long-term data on the model's learning and predictions.\n",
     "\n",
-    "These modifications can lead to new insights and help you understand the robustness and adaptability of your model. Feel free to try out different combinations and observe how they affect the model's performance and outputs.\n"
+    "These modifications can lead to new insights and help you understand the robustness and adaptability of your model. Feel free to try out different combinations and observe how they affect the model's performance and outputs.\n",
+    "\n",
+    "Head over to `deep_bucket_lab/experiments`\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rain_probability_range = {\"None\": [0.6, 0.7], \"Light\": [0.5, 0.8], \"Heavy\": [0.05, 0.1]}\n",
-    "rain_depth_range = {\"Light\": [0, 2], \"Heavy\": [6, 14]}\n",
-    "\n",
-    "bucket_attributes_range = {\"A_bucket\": [1.0, 2.0],\n",
-    "                           \"A_spigot\": [0.1, 0.2],\n",
-    "                           \"H_bucket\": [5.0, 6.0],\n",
-    "                           \"H_spigot\": [1.0, 3.0],\n",
-    "                           \"K_infiltration\": [1e-7, 1e-9],\n",
-    "                           \"ET_parameter\": [7, 9]\n",
-    "                          }\n",
-    "\n",
-    "noise = {\"pet\": 0.1, \"et\": 0.1, \"q\": 0.1, \"head\": 0.1} "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As part of our experimentation, let's adjust the configuration of our bucket splits and the duration of our time series. This change will allow us to explore how different training, validation, and testing setups impact the model's learning and prediction capabilities.\n",
-    "\n",
-    "- We'll modify the number of buckets allocated for training, validation, and testing. Increasing the number of training buckets, for example, can provide the model with more data to learn from.\n",
-    "- We'll also adjust the length of the time series for each split. Extending the training time series can give the model a more comprehensive view of the system's behavior over time.\n",
-    "\n",
-    "The following code block updates these parameters and recalculates the necessary splits using the `split_parameters` function. These adjustments are an integral part of our experimentation, enabling us to observe how variations in data quantity and time frame affect the model's performance.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_buckets_split = {\"train\": 25, \"val\": 5,\"test\": 1}\n",
-    "time_splits = {\"train\": 2000, \"val\": 1000,\"test\": 500}\n",
-    "num_records = time_splits[\"train\"] + time_splits[\"val\"] + time_splits[\"test\"] + seq_length * 3\n",
-    "n_buckets = n_buckets_split[\"train\"] + n_buckets_split[\"val\"] + n_buckets_split[\"test\"]\n",
-    "\n",
-    "[[buckets_for_training, train_start, train_end],\n",
-    "[buckets_for_val, val_start, val_end],\n",
-    "[buckets_for_test, test_start, test_end]]= split_parameters()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With our new bucket splits and time series configurations in place, the next step is to re-generate the forcings and 'ground truth' data for our adjusted bucket setups. This process involves:\n",
-    "\n",
-    "- Re-initializing the bucket configurations with the `setup_buckets` function, which will reflect our updated number of buckets and their characteristics.\n",
-    "- Creating new synthetic precipitation data (`in_list`) for each bucket using the `pick_rain_params` and `random_rain` functions. This step ensures that each bucket receives a unique set of rainfall inputs, reflecting the variability in hydrological conditions.\n",
-    "- Running the bucket model simulations again for each bucket using the `run_bucket_simulation` function. These simulations will produce new 'ground truth' data that aligns with our updated configurations.\n",
-    "- Visualizing a sample of the bucket fluxes for the validation set using the `viz_simulation` function. This visualization helps us confirm that the simulations are producing realistic and varied hydrological behaviors.\n",
-    "\n",
-    "The following code block executes these steps, ensuring that our LSTM model will be trained and validated on data that accurately represents the new experimental conditions we've set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "buckets, h_water_level, mass_overflow = setup_buckets(n_buckets)\n",
-    "\n",
-    "in_list = {}\n",
-    "for ibuc in range(n_buckets):\n",
-    "    bucket_rain_params = pick_rain_params()\n",
-    "    in_list[ibuc] = [0]\n",
-    "    for i in range(1, num_records):\n",
-    "        in_list[ibuc].append(random_rain(in_list[ibuc][i-1], bucket_rain_params))\n",
-    "\n",
-    "bucket_dictionary = {}\n",
-    "for ibuc in range(n_buckets):\n",
-    "    bucket_dictionary[ibuc] = run_bucket_simulation(ibuc)\n",
-    "    \n",
-    "for ibuc in buckets_for_val:\n",
-    "    viz_simulation(ibuc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After adjusting our bucket configurations and generating new 'ground truth' data, the next step is to re-create the data loaders for our training, validation, and testing sets. This is essential to ensure that our LSTM model is trained and evaluated on the most current and relevant data.\n",
-    "\n",
-    "- First, we re-fit the scalers to the new training data using the `fit_scaler` function. This ensures that our input and output data are properly normalized and standardized.\n",
-    "- Then, we use the `make_data_loader` function to create new data loaders for each of our data splits. These loaders will handle the updated datasets, managing batch processing and shuffling for efficient model training and evaluation.\n",
-    "\n",
-    "The following code block executes these steps, setting up the necessary infrastructure for feeding the updated data into our LSTM model during the subsequent training and validation processes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler_in, scaler_out = fit_scaler()\n",
-    "train_loader, np_train_seq_X, np_train_seq_y = make_data_loader(train_start, train_end, buckets_for_training)\n",
-    "val_loader, np_val_seq_X, np_val_seq_y = make_data_loader(val_start, val_end, buckets_for_val)\n",
-    "test_loader, np_test_seq_X, np_test_seq_y = make_data_loader(test_start, test_end, buckets_for_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With our new data loaders in place, the next step is to reinitialize the LSTM model and perform the training process with the updated dataset. This reinitialization is crucial to ensure that the model starts with fresh parameters, allowing it to learn from the new data without any influence from the previous training sessions.\n",
-    "\n",
-    "- We recreate the LSTM model instance with the same architecture and hyperparameters as before. This ensures consistency in the model's structure while allowing it to adapt to the new data.\n",
-    "- We then proceed to train the model using the `train_model` function with the newly created training data loader. This training will enable the LSTM to learn the patterns and dynamics present in our updated dataset.\n",
-    "\n",
-    "The following code block executes these steps, setting the stage for the LSTM model to learn from the new experimental conditions and provide insights into the system's behavior under these updated scenarios."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lstm = LSTM1(num_classes=n_output,  \n",
-    "             input_size=n_input,    \n",
-    "             hidden_size=hidden_state_size, \n",
-    "             num_layers=num_layers, \n",
-    "             batch_size=batch_size, \n",
-    "             seq_length=seq_length).to(device=device)\n",
-    "\n",
-    "lstm, results = train_model(lstm, train_loader, buckets_for_training)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After retraining our LSTM model with the updated dataset, it's important to assess the learning progress and model performance. We'll do this in two key steps:\n",
-    "\n",
-    "1. **Visualizing the Learning Curve**: Using the `viz_learning_curve` function, we'll plot the learning curves based on the training results. This visualization will show us the loss and RMSE over each training epoch, providing insights into the model's learning efficiency and convergence with the new data.\n",
-    "\n",
-    "2. **Validation Check**: We'll then apply the `check_validation_period` function to each bucket in our validation set. This step is crucial to evaluate how well the retrained model performs on unseen data and to ensure that it generalizes well.\n",
-    "\n",
-    "These steps are essential for understanding the impact of our experimental changes on the model's learning dynamics and overall performance."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "viz_learning_curve(results)\n",
-    "\n",
-    "for ibuc in buckets_for_val:\n",
-    "    check_validation_period(lstm, np_val_seq_X, ibuc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1492,7 +1327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
