Updated markdown sections to use consistent units (m and s) when describing bucket configurations

--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -124,7 +124,7 @@
     "- **Light**: More frequent events with lower intensity.\n",
     "- **Heavy**: Less frequent with higher intensity. Driving \"overtopping\" events.\n",
     "\n",
-    "These parameters allow us to create a diverse set of precipitation scenarios, each affecting the hydrological system in different ways.\n"
+    "These parameters allow us to create a diverse set of precipitation scenarios, each affecting the hydrological system in different ways. Precipitation is measured in \\([m/s]\\).\n"
    ]
   },
   {
@@ -152,8 +152,8 @@
     "- `A_spigot`: The area of the spigot, also in square meters \\([m^2]\\). The spigot area affects flow out of the bucket.\n",
     "- `H_bucket`: The height of the bucket, measured in meters \\([m]\\). This defines the maximum water level the bucket can sustain.\n",
     "- `H_spigot`: The height of the spigot from the bucket's base, in meters \\([m]\\). It influences how water level changes affect the outflow.\n",
-    "- `K_infiltration`: The infiltration rate, indicating how quickly water seeps through the bucket, measured in millimeters per hour \\([mm/hr]\\).\n",
-    "- `ET_parameter`: The evapotranspiration parameter, representing the rate of water loss due to evaporation and transpiration, measured in millimeters per day \\([mm/day]\\).\n",
+    "- `K_infiltration`: The infiltration rate, indicating how quickly water seeps through the bucket, measured in millimeters per hour \\([m/s]\\).\n",
+    "- `ET_parameter`: The evapotranspiration parameter, representing the rate of water loss due to evaporation and transpiration, measured in millimeters per day \\([m/s]\\).\n",
     "\n",
     "To introduce variability and simulate different hydrological scenarios, we will generate a range of leaky buckets by randomly selecting values for these physical attributes from predefined ranges. This approach allows us to explore a wide spectrum of bucket behaviors and their responses to various hydrological conditions.\n",
     "\n",
@@ -513,7 +513,7 @@
     "\n",
     "- The probability of having no rain, light rain, or heavy rain, based on the parameters assigned to each bucket.\n",
     "- The intensity of the rain, which is determined by a random process within specified depth ranges for light and heavy rain.\n",
-    "- The influence of preceding rainfall conditions. For instance, the likelihood of a certain type of rain (light or heavy) can depend on the rainfall of the previous day.\n",
+    "- The influence of preceding rainfall conditions. For instance, the likelihood of a certain type of rain (light or heavy) can depend on the rainfall of the previous time step.\n",
     "\n",
     "This stochastic approach to generating rain ensures that each bucket experiences a dynamic and varied set of precipitation events. Such variability is essential for testing and training our model to handle a wide range of hydrological scenarios, enhancing its robustness and predictive accuracy.\n"
    ]
