--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -152,8 +152,8 @@
     "- `A_spigot`: The area of the spigot, also in square meters \\([m^2]\\). The spigot area affects flow out of the bucket.\n",
     "- `H_bucket`: The height of the bucket, measured in meters \\([m]\\). This defines the maximum water level the bucket can sustain.\n",
     "- `H_spigot`: The height of the spigot from the bucket's base, in meters \\([m]\\). It influences how water level changes affect the outflow.\n",
-    "- `K_infiltration`: The infiltration rate, indicating how quickly water seeps through the bucket, measured in millimeters per hour \\([m/s]\\).\n",
-    "- `ET_parameter`: The evapotranspiration parameter, representing the rate of water loss due to evaporation and transpiration, measured in millimeters per day \\([m/s]\\).\n",
+    "- `K_infiltration`: The infiltration rate (geological permeability), indicating how quickly water seeps through the bucket, measured in square meters \\([m^2]\\).\n",
+    "- `ET_parameter`: The evapotranspiration parameter, representing the rate of water loss due to evaporation and transpiration, measured in meters per second \\([m/s]\\).\n",
     "\n",
     "To introduce variability and simulate different hydrological scenarios, we will generate a range of leaky buckets by randomly selecting values for these physical attributes from predefined ranges. This approach allows us to explore a wide spectrum of bucket behaviors and their responses to various hydrological conditions.\n",
     "\n",
