--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -153,7 +153,7 @@
     "- `H_bucket`: The height of the bucket, measured in meters \\([m]\\). This defines the maximum water level the bucket can sustain.\n",
     "- `H_spigot`: The height of the spigot from the bucket's base, in meters \\([m]\\). It influences how water level changes affect the outflow.\n",
     "- `K_infiltration`: The infiltration rate (geological permeability), indicating how quickly water seeps through the bucket, measured in square meters \\([m^2]\\).\n",
-    "- `ET_parameter`: The evapotranspiration parameter, representing the rate of water loss due to evaporation and transpiration, measured in meters per second \\([m/s]\\).\n",
+    "- `ET_parameter`: The evapotranspiration parameter, representing the rate of water loss due to evaporation and transpiration, measured in meters per day \\([m/day]\\).\n",
     "\n",
     "To introduce variability and simulate different hydrological scenarios, we will generate a range of leaky buckets by randomly selecting values for these physical attributes from predefined ranges. This approach allows us to explore a wide spectrum of bucket behaviors and their responses to various hydrological conditions.\n",
     "\n",
@@ -608,7 +608,10 @@
     "        h_water_level[ibuc] = h_water_level[ibuc] + precip_in\n",
     "\n",
     "        # Lose mass out of the bucket. Some periodic type loss, evaporation, and some infiltration...\n",
-    "        et = np.max([0, (buckets[\"A_bucket\"][ibuc] / buckets[\"ET_parameter\"][ibuc]) * np.sin(t) * np.random.normal(1, noise['pet'])])\n",
+    "\n",
+    "        # ET (m/s) is the value at each time step taking diurnal fluctuations into account. The definite integral of the following function\n",
+    "        # (excluding noise) from 0 to 86400 is equal to ET_parameter, which is measured in m/day.\n",
+    "        et = np.max([0, (0.5* buckets[\"ET_parameter\"][ibuc]) * np.sin((1/13750.9870831)*t) * np.random.normal(1, noise['pet'])])\n",
     "        infiltration = h_water_level[ibuc] * buckets[\"K_infiltration\"][ibuc]\n",
     "        h_water_level[ibuc] = np.max([0 , (h_water_level[ibuc] - et)])\n",
     "        h_water_level[ibuc] = np.max([0 , (h_water_level[ibuc] - infiltration)])\n",
