Updated infiltration calculation in run_bucket_simulation to follow Darcy's Law

--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -98,6 +98,8 @@
     "**Global Variables:**\n",
     "\n",
     "- `g`: Gravitational acceleration, denoted in meters per second squared \\([m/s^2]\\).\n",
+    "- `rho`: Density of water, denoted in kilograms per cubic meter \\([kg/m^3]\\).\n",
+    "- `mu`: Viscosity of water, denoted in Pascals times seconds \\([Pa\\cdot s]\\).\n",
     "- `time step`: The time increment for each step in our simulation, measured in seconds \\([s]\\)."
    ]
   },
@@ -108,6 +110,8 @@
    "outputs": [],
    "source": [
     "g = 9.807\n",
+    "rho = 1000\n",
+    "mu = 0.001\n",
     "time_step = 1"
    ]
   },
@@ -154,6 +158,7 @@
     "- `H_spigot`: The height of the spigot from the bucket's base, in meters \\([m]\\). It influences how water level changes affect the outflow.\n",
     "- `K_infiltration`: The infiltration rate (geological permeability), indicating how quickly water seeps through the bucket, measured in square meters \\([m^2]\\).\n",
     "- `ET_parameter`: The evapotranspiration parameter, representing the rate of water loss due to evaporation and transpiration, measured in meters per day \\([m/day]\\).\n",
+    "- `soil_depth`: The soil depth, measured in meters \\([m]\\). This affects the infiltration rate.\n",
     "\n",
     "To introduce variability and simulate different hydrological scenarios, we will generate a range of leaky buckets by randomly selecting values for these physical attributes from predefined ranges. This approach allows us to explore a wide spectrum of bucket behaviors and their responses to various hydrological conditions.\n",
     "\n",
@@ -171,7 +176,8 @@
     "                           \"H_bucket\": [5.0, 6.0],\n",
     "                           \"H_spigot\": [1.0, 3.0],\n",
     "                           \"K_infiltration\": [1e-7, 1e-9],\n",
-    "                           \"ET_parameter\": [7, 9]\n",
+    "                           \"ET_parameter\": [7, 9],\n",
+    "                           \"soil_depth\": [10, 20]\n",
     "                          }\n",
     "\n",
     "bucket_attributes_list = list(bucket_attributes_range.keys())"
@@ -612,7 +618,25 @@
     "        # ET (m/s) is the value at each time step taking diurnal fluctuations into account. The definite integral of the following function\n",
     "        # (excluding noise) from 0 to 86400 is equal to ET_parameter, which is measured in m/day.\n",
     "        et = np.max([0, (0.5* buckets[\"ET_parameter\"][ibuc]) * np.sin((1/13750.9870831)*t) * np.random.normal(1, noise['pet'])])\n",
-    "        infiltration = h_water_level[ibuc] * buckets[\"K_infiltration\"][ibuc]\n",
+    "\n",
+    "        # Calculate change in height due to infiltration using Darcy's Law. Divide Q (m^3/s) by A_bucket (m^2) to get infiltration (m/s)\n",
+    "        # Q = (k * rho * g * A_bucket * delta_h) / (mu * L)\n",
+    "        # infiltration = (k * rho * g * delta_h) / (mu * L)\n",
+    "\n",
+    "        # k = K_infiltration = geologic permeability (m^2)\n",
+    "        # rho = density of water, constant, ~1000 kg/m^3\n",
+    "        # g = gravitational constant, ~9.807 m/s^2\n",
+    "        # mu = viscosity of water, constant , ~0.001 Pa/s\n",
+    "        # L = soil depth (m)\n",
+    "        # delta_h = hydraulic head/soil water potential (m) = soil depth + h_water_level\n",
+    "        # infitration = flow (m/s)\n",
+    "\n",
+    "        k = buckets['K_infiltration']\n",
+    "        L = buckets['soil_depth']\n",
+    "        delta_h = h_water_level + L\n",
+    "\n",
+    "        infiltration = (k * rho * g * delta_h) / (mu * L) \n",
+    "\n",
     "        h_water_level[ibuc] = np.max([0 , (h_water_level[ibuc] - et)])\n",
     "        h_water_level[ibuc] = np.max([0 , (h_water_level[ibuc] - infiltration)])\n",
     "        h_water_level[ibuc] = h_water_level[ibuc] * np.random.normal(1, noise['et'])\n",
