Updated overflow and spigot flow calculations to avoid impossible values and reflect appropriate units

--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -631,8 +631,8 @@
     "        # delta_h = hydraulic head/soil water potential (m) = soil depth + h_water_level\n",
     "        # infitration = flow (m/s)\n",
     "\n",
-    "        k = buckets['K_infiltration']\n",
-    "        L = buckets['soil_depth']\n",
+    "        k = buckets['K_infiltration'][ibuc]\n",
+    "        L = buckets['soil_depth'][ibuc]\n",
     "        delta_h = h_water_level + L\n",
     "\n",
     "        infiltration = (k * rho * g * delta_h) / (mu * L) \n",
@@ -642,8 +642,9 @@
     "        h_water_level[ibuc] = h_water_level[ibuc] * np.random.normal(1, noise['et'])\n",
     "\n",
     "        # Overflow if the bucket is too full\n",
+    "        # mass_overflow is measured in m^3/s\n",
     "        if h_water_level[ibuc] > buckets[\"H_bucket\"][ibuc]:\n",
-    "            mass_overflow[ibuc] = h_water_level[ibuc] - buckets[\"H_bucket\"][ibuc]\n",
+    "            mass_overflow[ibuc] = (h_water_level[ibuc] - buckets[\"H_bucket\"][ibuc]) * buckets[\"A_bucket\"][ibuc]\n",
     "            h_water_level[ibuc] = buckets[\"H_bucket\"][ibuc] \n",
     "            h_water_level[ibuc] = h_water_level[ibuc] - np.random.uniform(0, noise['q'])\n",
     "\n",
@@ -655,7 +656,7 @@
     "        if h_head_over_spigot > 0:\n",
     "            velocity_out = np.sqrt(2 * g * h_head_over_spigot)\n",
     "            spigot_out = velocity_out *  buckets[\"A_spigot\"][ibuc] * time_step\n",
-    "            h_water_level[ibuc] = h_water_level[ibuc] - spigot_out\n",
+    "            h_water_level[ibuc] = np.max(buckets[\"H_spigot\"][ibuc], h_water_level[ibuc] - (spigot_out / buckets[\"A_bucket\"][ibuc]))\n",
     "        else:\n",
     "            spigot_out = 0\n",
     "\n",
