Put figures in appropriate folder

--- a/deep_bucket_lab.ipynb
+++ b/deep_bucket_lab.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "Light precipitation values are generated using a Gumbel right distribution. Heavy precipitation values are generated using a generalized Pareto distribution.\n",
     "\n",
-    "![alt text](download-4.png) ![alt text](download-5.png)"
+    "![alt text](figs/download-4.png) ![alt text](figs/download-5.png)"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "\n",
     "The following code block defines the possible ranges for each attribute, ensuring a diverse set of buckets for our simulations.\n",
     "\n",
-    "![alt text](download-1.png) ![alt text](download.png) \n"
+    "![alt text](figs/download-1.png) ![alt text](figs/download.png) \n"
    ]
   },
   {
